# misnomer

./: .gitattributes  README.md  issue-multi-token-perplexity-deflation.md  misnomer-review.md  pyproject.toml  semantic_error_spec.md
evaluation/: Qwen3-VL-8B-Instruct_results.jsonl  chandra_checkpoint.jsonl  chandra_results.jsonl  chatgpt-gpt4o_results.jsonl  chatgpt5_results.jsonl  claude-vision_results.jsonl  false_negatives_analysis.jsonl  full_eval_results.jsonl  gemini-portkey_results.jsonl  semantic_errors_viz.html  tesseract_results.jsonl
evaluation/model_data/: Qwen3-VL-8B-Instruct_results_semantic_error_counts.csv  chandra_checkpoint_semantic_error_counts.csv  chatgpt-gpt4o_results_semantic_error_counts.csv  chatgpt5_results_semantic_error_counts.csv  claude-vision_results_semantic_error_counts.csv  gemini-portkey_results_semantic_error_counts.csv  tesseract_results_semantic_error_counts.csv
scripts/false_negatives/: analyse.py  analysis.ipynb
scripts/false_positives/: analysis.ipynb  high_semantic_errors.csv
src/misnomer/: __init__.py  aligner.py  classifier.py  cli.py  composite.py  config.py  highlight.py  preprocess.py  report.py  scorer.py
src/misnomer/models/: __init__.py  embedder.py  lm.py
tests/: eval_notebook.ipynb  test_aligner.py  test_classifier.py  test_data.jsonl  test_data_semerr.jsonl  test_notes.md  test_scorer.py
